docs: improve openapi definition
